Add ILITEK USB TOUCHSCREEN(On-Lap 1303I)
- Add hid driver files
- How to enable
  kernel menuconfig
    Device Drivers --->
        HID support --->
		    Special HID drivers --->
			    <*> ILITEK USB touch screen driver

Change-Id: I6836038be57e1946824da49c24cd2b8f1152930b

--- a/drivers/hid/Kconfig
+++ b/drivers/hid/Kconfig
@@ -91,6 +91,9 @@ config HID_GENERIC
 menu "Special HID drivers"
 	depends on HID
 
+config HID_ILITEK_TOUCH
+	tristate "ILITEK USB touch screen driver"
+
 config HID_A4TECH
 	tristate "A4 tech mice"
 	depends on HID
