ARM64: dts: apalis-imx8x: Move part of usbotg3 to SoM level
USBOTG3 connects to USB Hub placed on SoM. As well as its VBUS enable
signal exports to board X1 connector.

Move a part of usbotg3 node to SoM module too.

Related-to: #57466
Related-to: #55501
Signed-off-by: Oleksandr Suvorov <oleksandr.suvorov@toradex.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qxp-apalis.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qxp-apalis.dtsi
@@ -1014,6 +1014,15 @@
 	};
 };
 
+/*
+ * Apalis USB 3.0 Host. Serves USB 3.0 4-port hub on module and
+ * USB 3.0 ports on-board
+ */
+&usbotg3 {
+	dr_mode = "host";
+	status = "okay";
+};
+
 /* On-module eMMC */
 &usdhc1 {
 	bus-width = <8>;
