--- a/arch/arm64/boot/dts/freescale/fsl-imx8qxp-apalis-eval.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qxp-apalis-eval.dtsi
@@ -239,19 +239,19 @@
 &lpuart1 {
 	status = "okay";
 };
-/*
+
 &mipi_dsi1 {
-	status = "okay";
+	status = "disabled";
 };
 
 &mipi_dsi_phy1 {
-	status = "okay";
+	status = "disabled";
 };
 
 &mipi_dsi_bridge1 {
-	status = "okay";
+	status = "disabled";
 };
-*/
+
 &mipi_dsi2 {
 	status = "okay";
 };
