--- a/arch/arm64/boot/dts/freescale/fsl-imx8qxp-apalis.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qxp-apalis.dtsi
@@ -937,6 +937,11 @@
 };
 #endif
 
+/* Apalis console */
+&pd_dma_lpuart1 {
+	debug_console;
+};
+
 /* Apalis BKL1_PWM */
 &pwm_mipi_lvds1 {
 	pinctrl-names = "default";
