* add TCC_RADIO_GPIO_CTRL driver(tcc_dxb_ctrl)
Change-Id: I88c3daba0ed618b7d0e39a553667b40efbee5ab6

--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -89,6 +89,7 @@ obj-$(CONFIG_TCC_TCM_LPO)	+= tcc_tcm_lpo.o
 
 obj-$(CONFIG_TCC_IPC) += tcc_ipc/
 
+obj-$(CONFIG_TCC_RADIO_GPIO_CTRL) += tcc_dxb_ctrl/
 obj-$(CONFIG_TCC_DRAM_TOOL) 	+= tcc_dram_tool.o
 
 obj-$(CONFIG_TCC_HSIO_CIPHER)	+= tcc_cipher/
