--- a/arch/arm/boot/dts/tcc/tcc9010-android-stb.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc9010-android-stb.dtsi
@@ -29,7 +29,7 @@
                 /*interrupts = <GIC_SPI 70 IRQ_TYPE_LEVEL_HIGH>;*/
                 /*interrupts = <GIC_SPI 95 IRQ_TYPE_LEVEL_HIGH>;*/
                 interrupts = <GIC_SPI 88 IRQ_TYPE_LEVEL_HIGH>;
-                clocks = <&clk_peri PERI_SMARTCARD>, <&clk_io IOBUS_SMARTCARD>;
+                clocks = <&clk_peri PERI_UART7>, <&clk_io IOBUS_SMARTCARD7>; /* UART7 and SMARTCARD7 share a peripheral clock which is PERI UART7 */
                 clock-names = "smartcardclk", "apb_pclk";
                 clock-frequency = <108000000>;
 
