ARM64: dts: apalis-imx8qxp: enable all uart interfaces
Signed-off-by: Philippe Schenker <philippe.schenker@toradex.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qxp-apalis-eval.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qxp-apalis-eval.dtsi
@@ -240,6 +240,21 @@
 	status = "okay";
 };
 
+/* Apalis UART2 */
+&lpuart0 {
+	status = "okay";
+};
+
+/* Apalis UART3 */
+&lpuart2 {
+	status = "okay";
+};
+
+/* Apalis UART4 */
+&lpuart3 {
+	status = "okay";
+};
+
 &mipi_dsi1 {
 	status = "disabled";
 };
