Update pmap size for tcc803x_linux_ivi
 - Set pmap size of overlay1 to 0
 - Remove define SUPPORT_ROTATION in tcc803x_linux_ivi
 to set pmap size of overlay_rot to 0

Change-Id: Idc148c4328d9a49e2e9e605f1a34d1e7d2c99f8d

--- a/arch/arm/boot/dts/tcc/tcc-pmap-803x-linux-customized.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc-pmap-803x-linux-customized.dtsi
@@ -56,7 +56,9 @@
 /********************* Need to be optimized by customer ******************/
 //##################################################################################################################################################
 
+#ifdef CONFIG_ANDROID
 #define SUPPORT_ROTATION  // Enable in case supporting the display-device or video-contents rotation (90/180/270) // have to have rotation h/w block
+#endif
 
 //***************************** DISPLAY ******************************/
 #define PRIMARY_FRAMEBUFFER_WIDTH			1920
