ARM64: fsl-imx8qm-apalis: fix wakeup by gpio key
Add required pad-wakeup/pad-wakeup-num properties to have
wakeup by gpio key function working.

Signed-off-by: Oleksandr Suvorov <oleksandr.suvorov@toradex.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-apalis-eval.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-apalis-eval.dtsi
@@ -132,6 +132,17 @@
 	status = "okay";
 };
 
+&gpio2 {
+	/*
+	 * Add GPIO2_20 as a wakeup source:
+	 * Pin:  SC_P_SPI3_CS0 (MXM3_37/WAKE1_MICO)
+	 * Type: SC_PAD_WAKEUP_FALL_EDGE
+	 * Line: 20
+	 */
+	 pad-wakeup = <101 5 20>;
+	 pad-wakeup-num = <1>;
+};
+
 &gpu_3d0 {
 	status = "okay";
 };
