--- a/drivers/video/fbdev/tcc-fb/Makefile
+++ b/drivers/video/fbdev/tcc-fb/Makefile
@@ -11,6 +11,7 @@ obj-$(CONFIG_TCC_VIOC_CONTROLLER)	 += tcc_displayblock.o
 endif
 obj-$(CONFIG_LCD_HDMI1920X720_ADV7613)	+= hdmi_1920x720_adv7613.o 
 obj-$(CONFIG_TCC_VIDEO_DISPLAY_BY_VSYNC_INT) += tcc_vsync.o
+obj-$(CONFIG_VIOC_CORERESET_SUPPORT) += tcc_fb_cr.o
 obj-$(CONFIG_FB_VIOC) += tcc_vioc_fb.o
 obj-$(CONFIG_FB_NEW) += fb.o
 obj-$(CONFIG_TCC_VIOC_CONTROLLER)	 += tcc_vioc_interface.o tca_display_config.o vioc/ g2d/
