--- a/arch/arm/boot/dts/tcc/tcc8031-linux-avn.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc8031-linux-avn.dtsi
@@ -761,7 +761,7 @@
 	/* CP */
 	auth-cp {
 		compatible = "telechips, tcc-cp";
-		cp-type = <1>;	    /* 2.0C = 1, 2.0B = 0 */
+		cp-type = <2>;	    /* 2.0C = 1, 2.0B = 0, 3.0 = 2 */
 		i2c-channel = <3>;	/* 0 ~ 3 */
 		/*	power-ctrl-able; */
 		/* cp_power-gpio = <&gpk 14 0>; */
