tcc901x: dts: fix incorrectly assigned gpio pins
Change-Id: I75d5c8e7827c3302e78dceda2d93085bba491e73

--- a/arch/arm/boot/dts/dtboimg.cfg
+++ b/arch/arm/boot/dts/dtboimg.cfg
@@ -28,3 +28,6 @@ arch/arm/boot/dts/tcc/overlay-tcc8030-android-dual-lpd4321-ivi_sv0.1.dtbo
 arch/arm/boot/dts/tcc/overlay-tcc9010-android-lpd4321-v0.1.dtbo
 	id=0x3000
 	rev=0
+arch/arm/boot/dts/tcc/overlay-tcc9010-android-mini-tcm3840-lpd4321-v0.1.dtbo
+	id=0x3001
+	rev=0
