--- a/arch/arm/boot/dts/tcc/tcc8031-android-avn.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc8031-android-avn.dtsi
@@ -432,6 +432,9 @@
 	ak4601: ak4601@10 {
 		compatible = "akm,ak4601";
 		ak4601,pdn-gpio = <&gpe 14 0>;
+		//mute-gpios = <&gpe 15 0>;     //CODEC_MUTE    0: active high, 1: active low
+		mute-gpios = <&gpma 1 1>;       //AMP_MUTE      0: active high, 1: active low
+		stanby-gpios = <&gpma 2 0>;     //AMP_STBY      0: active high, 1: active low	
 		reg = <0x10>;
 	};
 };
