[ref] mmc: Disable mmc legacy driver
mmc legacy driver is disabled at all chipset except TCC897x.

ITS: TMABT-1190

Change-Id: If42352f6bb6012bb900db456b7805e8a383f0b21

--- a/drivers/mmc/host/Kconfig
+++ b/drivers/mmc/host/Kconfig
@@ -657,7 +657,7 @@ config MMC_VIA_SDMMC
 
 config MMC_TCC_SDHC
 	bool "Telechips SD/MMC Host Controller Driver - Legacy"
-	depends on MMC && ARCH_TCC
+	depends on MMC && ARCH_TCC897X
 	help
 	  This selects the Telechips Multimedia card Interface.
 	  If you have an TCC board with a Multimedia Card slot,
