ARM: dts: stm32: set ltdc pixel clock as clock boot on on stm32mp15
Set ltdc pixel clock as clock boot on to avoid glitch on LCD.

Change-Id: I777a1cb21c68b94792fd9c977b7a86eb0a263b94
Signed-off-by: Gabriel Fernandez <gabriel.fernandez@st.com>
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/linux-stm32/+/160608
Reviewed-by: CITOOLS <smet-aci-reviews@lists.codex.cro.st.com>
Reviewed-by: Alexandre TORGUE <alexandre.torgue@st.com>
Tested-by: Alexandre TORGUE <alexandre.torgue@st.com>

--- a/arch/arm/boot/dts/stm32mp157c.dtsi
+++ b/arch/arm/boot/dts/stm32mp157c.dtsi
@@ -1345,6 +1345,7 @@
 			#clock-cells = <1>;
 			#reset-cells = <1>;
 			interrupts = <GIC_SPI 5 IRQ_TYPE_LEVEL_HIGH>;
+			clocks-boot-on = <LTDC_PX>;
 		};
 
 		pwr: pwr@50001000 {
