ARM: dts: stm32: add ddrperfm on basic boot include in stm32mp15
Add ddrperfm in stm32mp15-no-scmi.dtsi file to be backward
compatible with old bootchain.

Fixes: 60cec9692dc7 ("ARM: dts: stm32: add ddrperfm on stm32mp151")
Signed-off-by: Patrick Delaunay <patrick.delaunay@st.com>
Change-Id: I0b8837b1d26bedd84fe3426f531bdff1a2634b37
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/linux-stm32/+/168432
Tested-by: Alexandre TORGUE <alexandre.torgue@st.com>
Reviewed-by: Alexandre TORGUE <alexandre.torgue@st.com>

--- a/arch/arm/boot/dts/stm32mp15-no-scmi.dtsi
+++ b/arch/arm/boot/dts/stm32mp15-no-scmi.dtsi
@@ -96,6 +96,10 @@
 	clocks = <&rcc CEC_K>, <&clk_lse>;
 };
 
+&ddrperfm {
+	clocks = <&rcc DDRPERFM>, <&rcc PLL2_R>;
+};
+
 &dsi {
 	clocks = <&rcc DSI_K>, <&clk_hse>, <&rcc DSI_PX>;
 };
