--- a/drivers/misc/hdcp/Makefile
+++ b/drivers/misc/hdcp/Makefile
@@ -1,4 +1,5 @@
 #
 # Makefile for the kernel HDCP drivers
 #
-obj-$(CONFIG_HDCP_DWC_DP)	+=  designware-dp.o
+obj-$(CONFIG_HDCP_DWC_DP)	+= designware-dp.o
+obj-$(CONFIG_HDCP_DWC_HLD)	+= designware-hld.o
