[fea] Modify tcc8050 dts to match USB VBus GPIO assign for 1.0 EVB
Move the USB related content defined in tcc8050-xxx-avn.dtsi to
tcc8050-xxx-lpd4x322_sv0.1.dts. And newly add the contents to
tcc8050-xxx-lpd4x322_sv1.0.dts according to the changed GPIO
assignment of USB VBus.

Linked Commit: -
ITS: -

Change-Id: If441c18a1bade6c020c92bc25d718ef3d4467d07

--- a/arch/arm/boot/dts/tcc/tcc8050-android-lpd4x322_sv1.0.dts
+++ b/arch/arm/boot/dts/tcc/tcc8050-android-lpd4x322_sv1.0.dts
@@ -434,5 +434,49 @@
 	};
 };
 
+/* USB 2.0 Host */
+&ehci_phy {
+	status = "disabled";
+	vbus-ctrl-able;
+	vbus-gpio = <&gpmd 15 0>; /* 0 : GPIO_ACTIVE_HIGH, 1 : GPIO_ACTIVE_LOW */
+};
 
+&ehci {
+	status = "disabled";
+	hcd_id = <0>;
+	phy-type = <1>; /* 0 : Nano PHY, 1 : Pico PHY */
+	TXVRT = <0xB>;
+	TXRISET = <0x3>;
+	TXAT = <0x1>;
+};
 
+&ohci {
+	status = "disabled";
+};
+
+/* USB 2.0 DRD */
+&dwc_otg_phy {
+	status = "okay";
+	vbus-ctrl-able;
+	vbus-gpio = <&gpmd 14 0>; /* 0 : GPIO_ACTIVE_HIGH, 1 : GPIO_ACTIVE_LOW */
+};
+
+&mhst_phy {
+	status = "okay";
+};
+
+&dwc_otg {
+	status = "okay";
+	phy-type = <1>; /* 0 : Nano PHY, 1 : Pico PHY */
+};
+
+/* USB 3.0 DRD */
+&dwc3_phy {
+	status = "okay";
+	vbus-ctrl-able;
+	vbus-gpio = <&gpmd 16 0>; /* 0 : GPIO_ACTIVE_HIGH, 1 : GPIO_ACTIVE_LOW */
+};
+
+&dwc3 {
+	status = "okay";
+};
