[upg] hdcp: Editing memory allocation sequence
Edit to allocate the dma memory at probe state

Change-Id: I3cb75cd9005f45d18a638fe9bd16291bc4e999c9
ITS: SD805XL1-487

--- a/arch/arm/boot/dts/tcc/tcc805x.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc805x.dtsi
@@ -3852,7 +3852,9 @@
 
 	dwc-hld {
 		compatible = "dwc,hld";
-		reg = <0x0 0x12440000 0x0 0x1000>;
+		reg = <0x0 0x12440000 0x0 0x80>;
+		firmware-size = <0x40000>;
+		data-size = <0x20000>;
 	};
 
 	adc: adc@1b700000 {
