--- a/arch/arm/boot/dts/tcc/tcc803x.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc803x.dtsi
@@ -125,39 +125,48 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		cpu@0 {
+
+		cpu-map {
+			cluster0 {
+				core0 {
+					cpu = <&A53_0>;
+				};
+				core1 {
+					cpu = <&A53_1>;
+				};
+				core2 {
+					cpu = <&A53_2>;
+				};
+				core3 {
+					cpu = <&A53_3>;
+				};
+			};
+		};
+
+		A53_0: cpu@0 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a53";
 			reg = <0x0>;
 			enable-method = "psci";
 			cpu-idle-states = <&CPU_SLEEP_0_0>;
-			operating-points = <
-				/* kHz    uV */
-				/*1302000 1200000*/
-				/*1226000 1150000*/
-				1150000 1100000
-				/*1074000 1050000*/
-				998000 1100000
-				908000 1100000
-			>;
-
+			operating-points-v2 = <&cpu_opp_table>;
 			clocks = <&clk_fbus FBUS_CPU0>;
 			clock-names = "cpu0";
 			clock-latency = <300000>;
 		};
-		cpu@1 {
+		A53_1: cpu@1 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a53";
 			reg = <0x1>;
 			enable-method = "psci";
 		};
-		cpu@2 {
+		A53_2: cpu@2 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a53";
 			reg = <0x2>;
 			enable-method = "psci";
 		};
-		cpu@3 {
+		A53_3: cpu@3 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a53";
 			reg = <0x3>;
@@ -174,6 +183,16 @@
 				entry-latency-us = <250>;
 				exit-latency-us = <500>;
 				min-residency-us = <950>;
+			};
+		};
+
+		cpu_opp_table: cpu_table {
+			compatible = "operating-points-v2";
+			opp-shared;
+
+			opp0 {
+				opp-hz = /bits/ 64 <1450000000>;
+				clock-latency-ns = <300000>;
 			};
 		};
 	};
