--- a/arch/arm64/configs/tcc803x_android_10_avn_defconfig
+++ b/arch/arm64/configs/tcc803x_android_10_avn_defconfig
@@ -66,6 +66,9 @@ CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_DEBUG=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_STAT=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPUFREQ_DT=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
