[bug] modified dtsi for ECID driver
Kernel panic occurred when accessing Efuse data because reg setting of dtsi is wrong.

Linked Commit:
ITS:

Change-Id: Ie22874cccaa94274de13cdb311049f87f1e36b23

--- a/arch/arm/boot/dts/tcc/tcc8050-android-avn.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc8050-android-avn.dtsi
@@ -64,7 +64,10 @@
 
 &cpu_id {
 	compatible = "telechips,tcc-cpu-id";
-	reg = <0x14200290 0x4 0x14200298 0x4 0x1420029C 0x4 0x14400014 0x4>;
+	reg = <0x0 0x14200290 0x0 0x4>,
+	    <0x0 0x14200298 0x0 0x4>,
+	    <0x0 0x1420029C 0x0 0x4>,
+	    <0x0 0x14400014 0x0 0x4>;
 	status = "okay";
 };
 
