--- a/arch/arm/boot/dts/tcc/tcc8050-linux-avn.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc8050-linux-avn.dtsi
@@ -457,10 +457,13 @@
 
 	gmac@11C00000 {
 		status = "okay";
-		compatible = "telechips,gmac";
-//		phyon-gpio	= <&gpc 27 0>;
+		compatible = "snps,dwmac-4.10a","telechips,gmac";
 		phyrst-gpio = <&gpmc 11 0>;
 		phy-interface = "rgmii";
+		interrupt-names = "macirq";
+		phy-mode = "rgmii";
+		snps,txpbl = <8>;
+		snps,rxpbl = <2>;
 		//ecid-mac-addr;
 		txclk-o-dly = <31>;
 		txclk-o-inv = <0>;
