--- a/arch/arm/boot/dts/tcc/tcc8053-android-avn.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc8053-android-avn.dtsi
@@ -575,9 +575,13 @@
 
 &gmac {
 	status = "okay";
-//	phyon-gpio	= <&gpc 27 0>;
+	compatible = "snps,dwmac-4.10a","telechips,gmac";
 	phyrst-gpio = <&gpmc 11 0>;
 	phy-interface = "rgmii";
+	interrupt-names = "macirq";
+	phy-mode = "rgmii";
+	snps,txpbl = <8>;
+	snps,rxpbl = <2>;
 	//ecid-mac-addr;
 	txclk-o-dly = <31>;
 	txclk-o-inv = <0>;
