[fea] [TCC803x] [D3S] [GMAC] GPIO for GMAC is change
GPIO for GMAC is changed from GPIO_A24 to GPIO_C_15

Linked Commit: N/A
ITS: N/A

Change-Id: I0d147718cde4589155ecbe0017ad6e4938d8e507

--- a/arch/arm/boot/dts/tcc/tcc803xp-linux-avn.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc803xp-linux-avn.dtsi
@@ -612,7 +612,7 @@
 		status = "okay";
 		compatible = "telechips,gmac";
 //		phyon-gpio	= <&gpc 27 0>;
-		phyrst-gpio = <&gpa 24 0>;
+		phyrst-gpio = <&gpc 15 0>;
 		phy-interface = "rgmii";
 		//ecid-mac-addr;
 		txclk-o-dly = <18>;
