[upg] update rear-camera switch gpio on sv1.0
   Linked Commit: N/A
   ITS: SD805XL1-1315

Change-Id: I6326dab6aa517167266927c731df56f273bbc8c5

--- a/arch/arm/boot/dts/tcc/tcc8050_53-pinctrl.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc8050_53-pinctrl.dtsi
@@ -2495,6 +2495,13 @@
 		telechips,no-pull;
 	};
 
+	switch_c13: switch_c13 {
+		telechips,pins = "gpc-13";
+		telechips,pin-function = <0>;
+		telechips,input-enable;
+		telechips,no-pull;
+	};
+
 	cam0_8bit_idle: cam0_8bit_idle {
 		telechips,pins = "gpa-0",  "gpa-1",  "gpa-2",  "gpa-11",  "gpa-12",
 				 "gpa-3",  "gpa-4",  "gpa-5",  "gpa-6",  "gpa-7",  "gpa-8",  "gpa-9",  "gpa-10";
