--- a/arch/arm/boot/dts/tcc/tcc8053-linux-subcore-a53q_sv1.0.dts
+++ b/arch/arm/boot/dts/tcc/tcc8053-linux-subcore-a53q_sv1.0.dts
@@ -1594,9 +1594,9 @@
 		status = "okay";
 
 		pinctrl-names = "default";
-		pinctrl-0 = <&switch_mb23>;
+		pinctrl-0 = <&switch_c13>;
 
-		switch-gpios = <&gpmb 23 1>;
+		switch-gpios = <&gpc 13 1>;
 		switch-active = <0>;
 	};
 
@@ -2077,8 +2077,8 @@
 		telechips,pin-function = <7>;
 	};
 
-	switch_mb23: switch_mb23 {
-		telechips,pins = "gpmb-23";
+	switch_c13: switch_c13 {
+		telechips,pins = "gpc-13";
 		telechips,pin-function = <0>;
 		telechips,input-enable;
 		telechips,no-pull;
