--- a/arch/arm64/configs/tcc805x_linux_dvrs_defconfig
+++ b/arch/arm64/configs/tcc805x_linux_dvrs_defconfig
@@ -114,6 +114,11 @@ CONFIG_REGULATOR_DA9062=y
 CONFIG_REGULATOR_GPIO=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
+CONFIG_MEDIA_CONTROLLER=y
+# CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
+CONFIG_I2C=y
+CONFIG_I2C_MUX=y
+CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_POWERVR_ROGUE=y
 CONFIG_DRM=y
@@ -226,8 +231,9 @@ CONFIG_DEBUG_SPINLOCK=y
 CONFIG_FB_TCC_OVERLAY=y
 CONFIG_OVERLAY1=y
 CONFIG_TCC_SCALER=y
-CONFIG_VIDEO_VIDEOSOURCE2=y
 CONFIG_VIDEO_TCCVIN2=y
+CONFIG_VIDEO_MAX96701=y
+CONFIG_VIDEO_MAX9286=y
 CONFIG_VENC_CNT_5=y
 CONFIG_INPUT_KEYBOARD=y
 CONFIG_IIO=y
