--- a/drivers/media/platform/tcc-isp/Kconfig
+++ b/drivers/media/platform/tcc-isp/Kconfig
@@ -8,8 +8,7 @@
 config TCC_ISP
 	bool "Telechips ISP driver"
 	default y
-        depends on ARCH_TCC805X
-	depends on VIDEO_VIDEOSOURCE || VIDEO_VIDEOSOURCE2
+        depends on ARCH_TCC805X && VIDEO_TCCVIN2
 	---help---
 	  Support for ISP
 
@@ -17,7 +16,6 @@ config TCC_ISP
 config TCC_ISP_USE_IOMMU
 	bool "Set IOMMU to access I2C controller 7 from ISP"
 	default y
-	depends on ARCH_TCC805X
-	depends on VIDEO_VIDEOSOURCE || VIDEO_VIDEOSOURCE2
+	depends on ARCH_TCC805X && VIDEO_TCCVIN2
 	---help---
 	  This must be set on the TCC805X ES
