--- a/drivers/media/platform/tcc-mipi-csi2/Kconfig
+++ b/drivers/media/platform/tcc-mipi-csi2/Kconfig
@@ -9,6 +9,10 @@ config TCC_MIPI_CSI2
 	bool "Telechips MIPI CSI-2 driver"
 	default y
         depends on ARCH_TCC803X || ARCH_TCC805X
-	depends on VIDEO_VIDEOSOURCE || VIDEO_VIDEOSOURCE2
+        depends on VIDEO_TCCVIN2
 	---help---
-	  Support for MIPI CSI-2
+	  This is a V4L2 driver for TCC803X and TCC805X SoC MIPI-CSI2
+	  receiver devices.
+
+	  Say Y here to enable MIPI-CSI2 receiver.
+	  The driver will be called tcc-mipi-csi2
